@@ -3,34 +3,47 @@
 accept.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 accept.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
 accept.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+accept.o: ../cups/transcode.h
 cancel.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 cancel.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
 cancel.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+cancel.o: ../cups/transcode.h
 cupsaddsmb.o: ../cups/string.h ../config.h ../cups/adminutil.h ../cups/cups.h
 cupsaddsmb.o: ../cups/ipp.h ../cups/http.h ../cups/md5.h ../cups/ppd.h
 cupsaddsmb.o: ../cups/array.h ../cups/file.h ../cups/language.h
-cupsaddsmb.o: ../cups/i18n.h ../cups/debug.h
+cupsaddsmb.o: ../cups/i18n.h ../cups/transcode.h ../cups/debug.h
+cupstestdsc.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
+cupstestdsc.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
+cupstestdsc.o: ../cups/file.h ../cups/language.h ../cups/file.h
+cupstestdsc.o: ../cups/i18n.h ../cups/transcode.h
 cupstestppd.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 cupstestppd.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
 cupstestppd.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+cupstestppd.o: ../cups/transcode.h
 lp.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 lp.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
-lp.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+lp.o: ../cups/file.h ../cups/language.h ../cups/i18n.h ../cups/transcode.h
 lpadmin.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 lpadmin.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
-lpadmin.o: ../cups/file.h ../cups/language.h ../cups/i18n.h ../cups/debug.h
+lpadmin.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+lpadmin.o: ../cups/transcode.h ../cups/debug.h
 lpinfo.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 lpinfo.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
-lpinfo.o: ../cups/file.h ../cups/language.h ../cups/i18n.h ../cups/debug.h
+lpinfo.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+lpinfo.o: ../cups/transcode.h ../cups/debug.h
 lpmove.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 lpmove.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
-lpmove.o: ../cups/file.h ../cups/language.h ../cups/i18n.h ../cups/debug.h
+lpmove.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+lpmove.o: ../cups/transcode.h ../cups/debug.h
 lpoptions.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 lpoptions.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
 lpoptions.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+lpoptions.o: ../cups/transcode.h
 lppasswd.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 lppasswd.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
-lppasswd.o: ../cups/file.h ../cups/language.h ../cups/i18n.h ../cups/md5.h
+lppasswd.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+lppasswd.o: ../cups/transcode.h ../cups/md5.h
 lpstat.o: ../cups/string.h ../config.h ../cups/cups.h ../cups/ipp.h
 lpstat.o: ../cups/http.h ../cups/md5.h ../cups/ppd.h ../cups/array.h
-lpstat.o: ../cups/file.h ../cups/language.h ../cups/i18n.h ../cups/debug.h
+lpstat.o: ../cups/file.h ../cups/language.h ../cups/i18n.h
+lpstat.o: ../cups/transcode.h ../cups/debug.h
